# NETSCOPE-v1.0

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  desktop-build.yml  windows-build.yml
agent/: Cargo.toml
agent/crates/agent/: Cargo.toml  build.rs
agent/crates/agent/src/: auth.rs  config.rs  enforce.rs  history.rs  main.rs  setup.rs  update.rs
agent/crates/agent/src/capture/: linux.rs  mod.rs  packet.rs  pcap.rs  windows.rs
agent/crates/agent/src/enrich/: dns.rs  geo.rs  mod.rs
agent/crates/enforcer/: Cargo.toml
agent/crates/enforcer/src/: apply.rs  apply_windows.rs  lib.rs  main.rs  proto.rs  server.rs  winpipe.rs
agent/crates/enforcer/tests/: socket_roundtrip.rs
agent/crates/narrator/: Cargo.toml
agent/crates/narrator/src/: classify.rs  eval.rs  explain.rs  lib.rs
agent/crates/protocol/: Cargo.toml
agent/crates/protocol/src/: codec.rs  lib.rs
agent/crates/ring/: Cargo.toml
agent/crates/ring/benches/: ring.rs
agent/crates/ring/src/: crossbeam_ring.rs  lib.rs  spsc.rs
agent/crates/warden/: Cargo.toml
agent/crates/warden/src/: generate.rs  lib.rs  threat.rs
docs/: TESTING-WINDOWS.md  desktop-update.md  eval.md  performance.md  protocol.md  ringbuffer.md  scrubbing.md  threat-model.md
docs/media/: README.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/resources/: install-enforcer.ps1  uninstall-enforcer.ps1
frontend/src-tauri/src/: main.rs
frontend/src/components/: ClusterLabelOverlay.tsx  FocusBreadcrumb.tsx  HelpOverlay.tsx  HoverTooltip.tsx  Hud.tsx  ImmersiveControl.tsx  Legend.tsx  PerfHud.tsx  SettingsPanel.tsx  SystemPanel.tsx  useFloatingPanel.ts
frontend/src/mock/: churn.ts
frontend/src/protocol/: index.ts
frontend/src/scene/: CameraRig.tsx  ClusterLabels.tsx  DeepOcean.tsx  HostCore.tsx  MarineSnow.tsx  OrganismNodes.tsx  PerfProbe.tsx  RelationshipEdges.tsx  Scene.tsx  TendrilField.tsx  capability.ts  layout.ts  palette.ts  perf.ts  relationships.test.ts  relationships.ts  useRenderStore.ts
frontend/src/scene/force/: forceLayout.ts  forceWorker.ts  sim.test.ts  sim.ts
frontend/src/scene/shaders/: edges.ts  marineSnow.ts  noise.ts  ocean.ts  organism.ts  tendrils.ts
frontend/src/store/: exportFlows.test.ts  exportFlows.ts  exposure.test.ts  exposure.ts  resync.test.ts  useNetscopeStore.ts  useViewStore.ts  useWardenStore.ts
frontend/src/transport/: Connection.ts  MockConnection.ts  WebSocketConnection.ts  auth.test.ts  auth.ts  index.ts  narrator.ts  reconnect.test.ts  setup.test.ts  setup.ts  update.ts  warden.test.ts  warden.ts  wire.test.ts  wire.ts
packaging/: netscope-enforcer.service
planning/: GROWTH.md  PITFALLS.md  RESOURCES.md  ROADMAP.md  SALVAGE.md  WARDEN.md
scripts/: download-geoip.ps1  download-geoip.sh  download-threatfeeds.ps1  download-threatfeeds.sh  overhead-bench.sh
