[package]
name = "netscope-protocol"
description = "The NETSCOPE wire protocol — the single source of truth for messages crossing the agent↔frontend boundary."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
ts-rs = { workspace = true }
