[package]
name = "netscope-ring"
description = "Bounded SPSC ring buffer for the NETSCOPE capture→protocol handoff — a crossbeam baseline and a hand-built lock-free implementation behind one trait."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
crossbeam = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ring"
harness = false
